--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.1",
+    "@astrojs/tailwind": "^3.1.2",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
-    "astro": "^2.3.0",
+    "astro": "^2.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2"
   }
 }
