--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "zustand": "^4.3.8"
   }
 }
