--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "astro": "^2.4.3",
+    "playwright": "1.34.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2",
