--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^3.1.2",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "antd": "5.5.2",
     "astro": "^2.4.3",
     "playwright": "1.34.3",
     "react": "^18.2.0",
