--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^2.1.1",
-    "@astrojs/tailwind": "^3.1.2",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
-    "antd": "5.5.2",
-    "astro": "^2.4.3",
-    "playwright": "1.34.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2",
-    "zustand": "^4.3.8"
+    "@astrojs/react": "2.2.1",
+    "@astrojs/tailwind": "4.0.0",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "antd": "5.6.3",
+    "astro": "2.7.1",
+    "playwright": "1.35.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "zustand": "4.3.8"
   }
 }
