--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "title": "Tic Tac Toe Game",
-    "description": "The \"Tic tac toe\" game made in React.",
+    "description": "The \"Tic tac toe\" game developed with React and deployed in Vercel",
     "slug": "react_tic-tac-toe",
     "languages": ["JavaScript", "CSS", "HTML"],
     "stars": 1,
@@ -11,7 +11,7 @@
   },
   {
     "title": "React Calculator",
-    "description": "A calculator made with React.",
+    "description": "Calculator developed with React and deployed in Vercel",
     "slug": "react_calculator",
     "languages": ["JavaScript", "CSS", "HTML"],
     "stars": 1,
