--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-app",
   "type": "module",
-  "version": "1.4.5",
+  "version": "1.5.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,16 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "2.2.1",
     "@astrojs/tailwind": "4.0.0",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "antd": "5.6.3",
-    "astro": "2.7.1",
+    "astro": "2.10.7",
     "playwright": "1.35.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "zustand": "4.3.8"
+    "tailwindcss": "3.3.2"
   }
 }
