--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "version": "1.6.3",
   "author": "@JefersonLC",
   "description": "My personal portfolio",
-  "repository": "https://github.com/JefersonLC/my-portfolio",
+  "repository": {
+    "url": "https://github.com/JefersonLC/my-portfolio",
+    "type": "git"
+  },
   "readme": "https://github.com/JefersonLC/my-portfolio/blob/main/README.md",
-  "bugs": "https://github.com/JefersonLC/my-portfolio/issues",
+  "bugs": {
+    "email": "c.jeferson.lc@gmail.com",
+    "url": "https://github.com/JefersonLC/my-portfolio/issues"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
