--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-app",
   "type": "module",
-  "version": "1.6.5",
+  "version": "1.7.5",
   "author": "@JefersonLC",
   "description": "My personal portfolio",
   "repository": {
@@ -23,7 +23,9 @@
   "dependencies": {
     "@astrojs/tailwind": "4.0.0",
     "astro": "3.0.5",
-    "playwright": "1.35.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "vite": "4.4.9"
   }
 }
