--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -1,62 +1,62 @@
 [
   {
-    "title": "Tic Tac Toe Game",
+    "title": "React Tic Tac Toe",
     "description": "The \"Tic tac toe\" game developed with React and deployed in Vercel",
     "slug": "react_tic-tac-toe",
-    "languages": ["JavaScript", "CSS", "HTML"],
-    "stars": 1,
+    "language": "JavaScript",
+    "start": 1,
     "forks": 0,
-    "link": "tictactoe-eta-ivory.vercel.app",
+    "link": "https://tictactoe-eta-ivory.vercel.app",
     "sourceCode": "https://github.com/JefersonLC/react_tic-tac-toe"
   },
   {
     "title": "React Calculator",
     "description": "Calculator developed with React and deployed in Vercel",
     "slug": "react_calculator",
-    "languages": ["JavaScript", "CSS", "HTML"],
-    "stars": 2,
+    "language": "JavaScript",
+    "start": 2,
     "forks": 2,
-    "link": "react-calculator-phi-rouge.vercel.app",
+    "link": "https://react-calculator-phi-rouge.vercel.app",
     "sourceCode": "https://github.com/JefersonLC/react_calculator"
   },
   {
     "title": "URL Shortener",
     "description": "URL Shortener made with React and Supabase",
     "slug": "url-shortener",
-    "languages": ["TypeScript", "JavaScript", "HTML", "CSS"],
-    "stars": 1,
+    "language": "TypeScript",
+    "start": 1,
     "forks": 0,
-    "link": "link-fawn.vercel.app",
+    "link": "https://link-fawn.vercel.app",
     "sourceCode": "https://github.com/JefersonLC/url-shortener"
   },
   {
-    "title": "Find Countries",
+    "title": "React Find Countries",
     "description": "Maybe your browser is blocking API requests",
     "slug": "react_find-countries",
-    "languages": ["JavaScript", "CSS", "TypeScript", "HTML"],
-    "stars": 1,
+    "language": "JavaScript",
+    "start": 1,
     "forks": 0,
-    "link": "countries-cjl.vercel.app/",
+    "link": "https://countries-cjl.vercel.app/",
     "sourceCode": "https://github.com/JefersonLC/react_find-countries"
   },
   {
     "title": "API Realtime Chat",
     "description": "API of a chat application developed in express and using websockets",
     "slug": "api_realtime-chat",
-    "languages": ["TypeScript"],
-    "stars": 1,
+    "language": "TypeScript",
+    "start": 1,
     "forks": 0,
-    "link": "api-chat-31lh.onrender.com",
+    "link": "https://api-chat-31lh.onrender.com",
     "sourceCode": "https://github.com/JefersonLC/api_realtime-chat"
   },
   {
-    "title": "Realtime chat",
+    "title": "React Realtime Chat",
     "description": "Chat application using an API made by me, developed with React and deployed with Vercel.",
     "slug": "react_realtime-chat",
-    "languages": ["TypeScript", "JavaScript", "HTML", "CSS"],
-    "stars": 1,
+    "language": "TypeScript",
+    "start": 1,
     "forks": 0,
-    "link": "chat-jefersonlc.vercel.app",
+    "link": "https://chat-jefersonlc.vercel.app",
     "sourceCode": "https://github.com/JefersonLC/react_realtime-chat"
   }
 ]
