update: projects list

--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -1,62 +1,1 @@
-[
-  {
-    "title": "React Tic Tac Toe",
-    "description": "The \"Tic tac toe\" game developed with React and deployed in Vercel",
-    "slug": "react_tic-tac-toe",
-    "language": "JavaScript",
-    "start": 1,
-    "forks": 0,
-    "link": "https://tictactoe-eta-ivory.vercel.app",
-    "sourceCode": "https://github.com/JefersonLC/react_tic-tac-toe"
-  },
-  {
-    "title": "React Calculator",
-    "description": "Calculator developed with React and deployed in Vercel",
-    "slug": "react_calculator",
-    "language": "JavaScript",
-    "start": 2,
-    "forks": 2,
-    "link": "https://react-calculator-phi-rouge.vercel.app",
-    "sourceCode": "https://github.com/JefersonLC/react_calculator"
-  },
-  {
-    "title": "URL Shortener",
-    "description": "URL Shortener made with React and Supabase",
-    "slug": "url-shortener",
-    "language": "TypeScript",
-    "start": 1,
-    "forks": 0,
-    "link": "https://link-fawn.vercel.app",
-    "sourceCode": "https://github.com/JefersonLC/url-shortener"
-  },
-  {
-    "title": "React Find Countries",
-    "description": "Maybe your browser is blocking API requests",
-    "slug": "react_find-countries",
-    "language": "JavaScript",
-    "start": 1,
-    "forks": 0,
-    "link": "https://countries-cjl.vercel.app/",
-    "sourceCode": "https://github.com/JefersonLC/react_find-countries"
-  },
-  {
-    "title": "API Realtime Chat",
-    "description": "API of a chat application developed in express and using websockets",
-    "slug": "api_realtime-chat",
-    "language": "TypeScript",
-    "start": 1,
-    "forks": 0,
-    "link": "https://api-chat-31lh.onrender.com",
-    "sourceCode": "https://github.com/JefersonLC/api_realtime-chat"
-  },
-  {
-    "title": "React Realtime Chat",
-    "description": "Chat application using an API made by me, developed with React and deployed with Vercel.",
-    "slug": "react_realtime-chat",
-    "language": "TypeScript",
-    "start": 1,
-    "forks": 0,
-    "link": "https://chat-jefersonlc.vercel.app",
-    "sourceCode": "https://github.com/JefersonLC/react_realtime-chat"
-  }
-]
+[{"title":"React Tic Tac Toe","description":"The \"Tic tac toe\" game developed with React and deployed in Vercel","slug":"react_tic-tac-toe","language":"JavaScript","stars":1,"forks":0,"link":"https://tictactoe-eta-ivory.vercel.app","sourceCode":"https://github.com/JefersonLC/react_tic-tac-toe"},{"title":"React Calculator","description":"Calculator developed with React and deployed in Vercel","slug":"react_calculator","language":"JavaScript","stars":2,"forks":2,"link":"https://react-calculator-phi-rouge.vercel.app","sourceCode":"https://github.com/JefersonLC/react_calculator"},{"title":"URL Shortener","description":"URL Shortener made with React and Supabase","slug":"url-shortener","language":"TypeScript","stars":1,"forks":0,"link":"https://link-fawn.vercel.app","sourceCode":"https://github.com/JefersonLC/url-shortener"},{"title":"React Find Countries","description":"Maybe your browser is blocking API requests","slug":"react_find-countries","language":"JavaScript","stars":1,"forks":0,"link":"https://countries-cjl.vercel.app/","sourceCode":"https://github.com/JefersonLC/react_find-countries"},{"title":"API Realtime Chat","description":"API of a chat application developed in express and using websockets","slug":"api_realtime-chat","language":"TypeScript","stars":1,"forks":0,"link":"https://api-chat-31lh.onrender.com","sourceCode":"https://github.com/JefersonLC/api_realtime-chat"},{"title":"React Realtime Chat","description":"Chat application using an API made by me, developed with React and deployed with Vercel.","slug":"react_realtime-chat","language":"TypeScript","stars":1,"forks":0,"link":"https://chat-jefersonlc.vercel.app","sourceCode":"https://github.com/JefersonLC/react_realtime-chat"}]
