--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "5.1.0",
-    "astro": "4.5.10",
-    "tailwindcss": "3.4.1"
+    "@astrojs/tailwind": "6.0.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "5.12.8",
+    "tailwindcss": "4.1.11"
   },
   "devDependencies": {
-    "vite": "5.2.6"
+    "vite": "7.0.6"
   }
 }
